# home-security

./: .gitignore  CMakeLists.txt  README.md  index.htm  xhr.js
ESP8266_Server_V2/: ESP8266_Server_V2.ino
ESP8266_Server_V3/: ESP8266_Server_V3.ino  index.htm  webpage.h  xhr.js
homecontrolpanel/: .firebaserc
homecontrolpanel/.firebase/: hosting.cHVibGlj.cache
homecontrolpanel/public/: index.htm  xhr.js
libs/: easytcp.c
pico/: CMakeLists.txt  main.c  main.h
src/: main.c  main.h
